# cxxtrace

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING.md  FILESTRUCTURE.md  README.md  README_en.md  TODO.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh  setup_dev.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  cmake-ci.yml
app/: CMakeLists.txt  cxxtrace_app.cpp
cmake/: CPM.cmake  message.cmake  platform.cmake  version.cmake  version.h.in
cmake/lifecycle/: post_project.cmake  pre_project.cmake
cmake/preset/: android.json  base.json  ios.json  linux.json  macos.json  windows.json
cmake/toolchain/: ios.cmake
cxxtrace_viewer/: README.md  package.json  pnpm-lock.yaml  vite.config.js
cxxtrace_viewer/src/: App.vue
cxxtrace_viewer/src/components/: FileSelector.vue  MetricSelector.vue  ThreadSelector.vue
cxxtrace_viewer/src/router/: index.js
cxxtrace_viewer/src/stores/: trace.js
cxxtrace_viewer/src/utils/: traceProcessor.js
cxxtrace_viewer/src/views/: CallGraphView.vue  FlameGraphView.vue  SplashView.vue  TagsView.vue
doc/: CMakeLists.txt  conf.py  index.rst
docs/: index.md  issue.md  requirements.txt
example/: CMakeLists.txt  example.cpp  scope.cpp  scope.dot  scope.json
include/cxxtrace/: cxxtrace.h  cxxtrace.hpp  location.h  wrap.hpp
include/cxxtrace/detail/: process_info.h  thread_info.h
include/cxxtrace/detail/mac/: process_info.h  thread_info.h
include/cxxtrace/utils/: json.hpp  wrap.h
src/: CMakeLists.txt  cxxtrace.cpp
src/cxxtrace/: CMakeLists.txt  cxxtrace.cpp  location.cpp  structlog.cpp  structlog.h
src/cxxtrace/hook/: CMakeLists.txt  malloc_hook.h  malloc_hook_disable_guard.h
src/cxxtrace/hook/impl/: malloc_hook.cpp  malloc_hook_disable_guard_posix.cpp  malloc_hook_linux.cpp  malloc_hook_osx.cpp  plthook.h  plthook_elf.c  plthook_osx.c  plthook_win32.c
src/cxxtrace/platform/: CMakeLists.txt  platform.h  thread_info.h
src/cxxtrace/platform/impl/android/: android.cpp
src/cxxtrace/platform/impl/ios/: ios.cpp
src/cxxtrace/platform/impl/linux/: linux.cpp  perf_event.cpp  perf_event.h  thread_info.cpp
src/cxxtrace/platform/impl/mac/: mac.cpp  thread_info.cpp
src/cxxtrace/platform/impl/win/: win.cpp
src/cxxtrace/platform/unittest/: CMakeLists.txt  platform_unittest.cpp
src/detail/: process_info.cpp  thread_info.cpp
src/detail/mac/: malloc_hook.cpp  malloc_hook.h  process_info.cpp  thread_info.cpp
tests/: CMakeLists.txt  cxxtrace_t.cpp  tests.cpp
tool/scopebox/: Cargo.toml
tool/scopebox/src/: dot_generator.rs  lib.rs  main.rs  models.rs
unittest/: CMakeLists.txt  cxx_project_name_unittest.cpp
